kubernetes_deployment/openshift/dazzledemo_all_in_one  EXAMPLE .yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dazzledemo
  namespace: demo
spec:
    selector:
      matchLabels:
        app: dazzledemo
    replicas: 1
    template:
      metadata:
        labels:
          app: dazzledemo
      spec:
        containers:
        - name: dazzledemo
          image: dockeraccount/reponame:tag
          imagePullPolicy: Always
          ports:
          - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: dazzledemo
  namespace: demo
  labels:
    app: dazzledemo
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: dazzledemo
  selector:
    app: dazzledemo
---
