kubernetes_deployment/openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dazzle-demo-app
  namespace: default
  labels:
    app: dazzle-demo-app
    app.kubernetes.io/component: dazzle-demo-app
    app.kubernetes.io/instance: dazzle-demo-app
    app.kubernetes.io/name: dazzle-demo-app
    app.kubernetes.io/part-of: dazzle-demo-app-app
    app.openshift.io/runtime-version: latest
spec:
  ports:
    - name: 3000-tcp
      protocol: TCP
      port: 3000
      targetPort: 3000
  internalTrafficPolicy: Cluster
  selector:
    app: dazzle-demo-app
    deploymentconfig: dazzle-demo-app
