kubernetes_deployment/openshift/dazzledemo_all_in_one.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    openshift.io/cluster-monitoring: "true"
  name: dazzle
spec: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dazzle-demo-app
  namespace: dazzle
  labels:
    app: dazzle-demo-app
    app.kubernetes.io/component: dazzle-demo-app
    app.kubernetes.io/instance: dazzle-demo-app
    app.kubernetes.io/name: dazzle-demo-app
    app.kubernetes.io/part-of: dazzle-demo-app-app
    app.openshift.io/runtime-namespace: dazzle
spec:
  selector:
    matchLabels:
      app: dazzle-demo-app
  replicas: 1
  template:
    metadata:
      labels:
        app: dazzle-demo-app
    spec:
      containers:
        - name: dazzle-demo-app
          image: davekrier/dazzledemo:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: dazzle-demo-app
  namespace: dazzle
  labels:
    app: dazzle-demo-app
    app.kubernetes.io/component: dazzle-demo-app
    app.kubernetes.io/instance: dazzle-demo-app
    app.kubernetes.io/name: dazzle-demo-app
    app.kubernetes.io/part-of: dazzle-demo-app-app
    app.openshift.io/runtime-version: latest
spec:
  ports:
    - name: 3000-tcp
      protocol: TCP
      port: 3000
      targetPort: 3000
  internalTrafficPolicy: Cluster
  selector:
    app: dazzle-demo-app
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: dazzle-demo-app
  namespace: dazzle
  labels:
    app: dazzle-demo-app
    app.kubernetes.io/component: dazzle-demo-app
    app.kubernetes.io/instance: dazzle-demo-app
    app.kubernetes.io/name: dazzle-demo-app
    app.kubernetes.io/part-of: dazzle-demo-app-app
    app.openshift.io/runtime-version: latest
spec:
  to:
    kind: Service
    name: dazzle-demo-app
    weight: 100
  port:
    targetPort: 3000
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  wildcardPolicy: None
---
